Correcting dark mode issue

--- a/src/index.css
+++ b/src/index.css
@@ -76,13 +76,13 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 
 @media (prefers-color-scheme: dark) {
   .glow {
-    color: #000;
-    text-shadow: 1px 1px 8px #333, 1px 1px 10px #555;
+    color:#fff;
+    text-shadow:1px 1px 8px #f2ffb6, 1px 1px 10px #e6ff76;
   }
 
   .glow:hover {
-    color: #000;
-    text-shadow: 1px 1px 8px #333, 1px 1px 16px #555; /* Cambia el sombreado en modo oscuro al pasar el cursor por encima */
+    color:#fff;
+    text-shadow:1px 1px 8px #f2ffb6, 1px 1px 16px #e6ff76; /* Cambia el sombreado en modo oscuro al pasar el cursor por encima */
   }
 }
 
